[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/awesome_splash/core/AspectNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/demo_collection/demo4/splash_screen.gd" type="Script" id=2]
[ext_resource path="res://src/demo_collection/demo4/logo_godot.png" type="Texture" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
    vec4 color = vec4(1.0, 1.0, 1.0, 1.0);
	vec2 center = vec2(0.5, 0.5);
	float r = (UV.x - center.x) * (UV.x - center.x) + (UV.y - center.y) * (UV.y - center.y);
	if (r > 0.25) {
		color.a = 0.0;
	}
    COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

void fragment() {
    vec4 color = vec4(1.0, 1.0, 1.0, 1.0);
	vec2 center = vec2(0.5, 0.5);
	float r = (UV.x - center.x) * (UV.x - center.x) + (UV.y - center.y) * (UV.y - center.y);
	if (r > 0.25) {
		color.a = 0.0;
	} else {
		color.a = r;
	}
    COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[node name="AweSplashScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectNode" parent="." instance=ExtResource( 1 )]

[node name="OutlineFrame" parent="AspectNode" index="0"]
margin_right = 1400.0
margin_bottom = 1400.0

[node name="InfoNode" type="Sprite" parent="AspectNode"]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 161, 970, 708, 137 )

[node name="CenterNode" type="Node2D" parent="AspectNode"]

[node name="Logo" type="Node2D" parent="AspectNode/CenterNode"]

[node name="Godot" type="Sprite" parent="AspectNode/CenterNode/Logo"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 236, 78, 552, 522 )

[node name="SmallCircle" type="ColorRect" parent="AspectNode/CenterNode/Logo"]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 100, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Circle" type="ColorRect" parent="AspectNode/CenterNode/Logo"]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -300.0
margin_right = 300.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 300, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodotTitle" type="Sprite" parent="AspectNode"]
position = Vector2( 0, 250 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 38, 708, 943, 259.794 )

[editable path="AspectNode"]
